[project]
name = "nlmortgage"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipympl>=0.9.7",
    "ipywidgets==7.6.5",
    "matplotlib>=3.10.1",
    "numpy-financial>=1.0.0",
    "numpy>=2.2.4",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
]
